--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,12 +8,14 @@ provisioner:
   # For example:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
+roles_path: ../../chef-config/roles/
+data_bags_path: ../../chef-config/vault-items
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
+  - name: bento/oracle-7.3
   - name: centos-7
 
 suites:
